# ros2-migration-tools

./: CONTRIBUTING.md  Config  Constants.py  DEVELOPMENT.md  LICENSE  NOTICE  README.md  __init__.py  clang_parser.py  clean_and_run_mac.sh  clean_sample.py  config.json  libclang.py  main.py  mappings.json  mappings_template.json  out_txt.txt  requirements.txt  ros_upgrader.py  run_colcon_build.sh  setup.cfg  setup.py  test.c  utilities.py  utils.py
bonsai/: __main__.py  analysis.py  bonsai.py  model.py  parser.py
bonsai/cpp/: analysis.py  clang_parser.py  model.py
clang/: cindex.py  clang_parser.py  filter_out.json
doc/: conf.py  index.rst
mapping/: filtered_out_tokens.json  mappings_template.json  master_mappings.json
porting_tools/: cmake_lists_porter.py  constants.py  cpp_source_code_porter.py  package_xml_porter.py  source_code_porter.py  utils.py
porting_tools/test/: ast_dump_lex_node.json  ast_dump_talker_cpp.json  test_cmake_lists_porter.py  test_cpp_source_porter.py  test_package_xml_porter.py
ros2_migration/: ros2_migration_tool.py
ros2_migration/docker_setup/: README.md  constants.py  docker_setup.py  setup.py
ros2_migration/effort_estimation/: README.md  effort_estimation.py  effort_estimation_to_csv.py  ros2_release_checker.py  unofficial_migration_status.yaml  utils.py
ros2_migration/porting_tools/: README.md  catkin_to_ament.py  (+6 more)
sample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  example.cpp  test.hpp
test/: README.md  test_b9_ros_migration_tools.py
token_filters/: filtered_out_tokens.json
(+7 files in other folders)
